# epaper-dashboard

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  run.sh  setup.sh
dashboard/: getalert.py  getdatetime.py  getsun.py  getweather.py  replacesvg.py  sendtodisplay.py  weather.py
dashboard/provider/: basedataprovider.py
dashboard/provider/alert/: alertdata.py  basealertprovider.py  brightsky.py  brightskyalertprovider.py
dashboard/provider/datetime/: datetimeprovider.py
dashboard/provider/datetime/model/: datetimedata.py
dashboard/provider/sun/: sunprovider.py
dashboard/provider/sun/model/: sundata.py
dashboard/provider/weather/: baseweatherprovider.py  brightsky.py  brightskyweatherprovider.py  weatherdata.py
dashboard/provider/weather/model/: weatherdata.py  weathericon.py
dashboard/utils/: files.py  utils.py
src/: __init__.py  main.py
