[project]
name = "epaper-dashboard"
version = "0.1.0"
description = "E-paper dashboard application"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
    "astral>=3.2",
    "cairosvg>=2.7.0",
    "pillow>=10.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dashboard*"]